# endianness

./: CMakeLists.txt  LICENSE  README.md  endianness.h
